# i3_alternating_layout_rust

./: Cargo.toml
src/: main.rs
