[package]
name = "i3_altarnating_layout_rust"
version = "0.1.0"
authors = ["navneet aman <contact@navneetaman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.i3ipc]
version = "0.10.1"
features = ["i3-4-14"]
